# earthML

./: README.md  calculate_metrics.py  earthml.toml  filtering.py  launch_experiment.py  launch_seasonal_ocean_exp.py  launch_smoothing_exp_t2m.py  launch_weather_exp.py  new_launcher_atmo.py  new_launcher_ocean.py  psdash.py  pyproject.toml
scripts/: make_ca_bundle.sh
src/earthml/: __init__.py  catalog.py  config.py  dataclasses.py  experiment.py  lightning.py  logging.py  manager.py  metrics.py  multirun.py  source.py  utils.py
src/earthml/experiments/: __init__.py  mlfc.py  registry.py
src/earthml/launchers/: __init__.py  base.py  mlfc.py  registry.py  runtime.py
src/earthml/nets/: __init__.py  gnn.py  registry.py  smaatunet.py
src/earthml/providers/: __init__.py  atmo.py  base.py  ecmwf_opendata.py  ocean.py  presets.py  registry.py
src/earthml/sources/: __init__.py  _preprocess.py  base.py  combinators.py  earthkit.py  juno_local.py  registry.py  xarray_local.py
